# vcpkg

CheckersProject/: CMakeLists.txt
CheckersProject/src/: main.cpp
